Add and implement deleteCategory method